<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    android:background="#E0E0E0"
    android:weightSum="1">

    <TextView
        android:text="@string/protfolio_title"
        android:layout_width="259dp"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:textSize="25dp"
        android:gravity="center|center_horizontal" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        tools:targetApi="honeycomb"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/movies"
        android:layout_margin="5dp"
        android:background="@drawable/mybutton"
        android:onClick="onClickBtn1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/scores"
        android:layout_margin="5dp"
        android:background="@drawable/mybutton"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClickBtn2"
        tools:targetApi="honeycomb" />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/libary"
        android:layout_margin="5dp"
        android:background="@drawable/mybutton"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClickBtn3"
        tools:targetApi="honeycomb" />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/bigger"
        android:layout_margin="5dp"
        android:background="@drawable/mybutton"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClickBtn4"
        tools:targetApi="honeycomb" />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/xyz"
        android:layout_margin="5dp"
        android:background="@drawable/mybutton"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClickBtn5"
        tools:targetApi="honeycomb" />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/capstone"
        android:layout_margin="5dp"
        android:background="@drawable/last_btn"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClickBtn6"
        tools:targetApi="honeycomb" />


</LinearLayout>
